Turn on Ingress to reach backend

--- a/k8s/chess_ingress.yaml
+++ b/k8s/chess_ingress.yaml
@@ -10,7 +10,12 @@ spec:
  - host: minikube
    http:
      paths:       
-     - path: /
+     - path: /?(.*)
        backend:
          serviceName: frontend
          servicePort: 4200
+     - path: /api/?(.*)
+       backend:
+         serviceName: backend
+         servicePort: 8080
+         
