Postgre bekötve. Next step: configmap és secret

--- a/k8s/chess_ingress_be.yaml
+++ b/k8s/chess_ingress_be.yaml
@@ -14,3 +14,7 @@ spec:
        backend:
          serviceName: backend
          servicePort: 8080
+     - path: /logout/?(.*)
+       backend:
+         serviceName: backend
+         servicePort: 8080         
