--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,19 +1,19 @@
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/db
 
-spring.datasource.url=jdbc:postgresql://188.166.7.163:5432/donat
+spring.datasource.url=jdbc:postgresql://postgre:5432/donat
 spring.datasource.username=donat
 spring.datasource.password=don-chess-77
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 
 local.server.port=8080
 
-#logging.level.org.springframework.security=DEBUG
+#applicationging.level.org.springframework.security=DEBUG
 
 #mail
 spring.mail.host=smtp.gmail.com
