--- a/k8s/chess_frontend_s.yaml
+++ b/k8s/chess_frontend_s.yaml
@@ -9,6 +9,6 @@ spec:
   ports:
   - protocol: TCP
     port: 4200
-    targetPort: http
+    targetPort: 4200
     nodePort: 32123
   type: NodePort
