configmap and secret is being used

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,9 +1,9 @@
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/db
 
-spring.datasource.url=jdbc:postgresql://postgre:5432/donat
-spring.datasource.username=donat
-spring.datasource.password=don-chess-77
+spring.datasource.url="jdbc:postgresql://"${DB_SERVICE}":5432/"${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
