--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/db
 
-spring.datasource.url="jdbc:postgresql://"${DB_SERVICE}":5432/"${DB_NAME}
+spring.datasource.url=jdbc:postgresql://${DB_SERVICE}:5432/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driverClassName=org.postgresql.Driver
