--- a/helm/templates/chess_backend.yaml
+++ b/helm/templates/chess_backend.yaml
@@ -36,9 +36,9 @@ spec:
               key: db.user
         - name: DB_PASSWORD
           valueFrom:
-            configMapKeyRef:
-              name: chess-config
-              key: db.pw
+            secretKeyRef:
+              name: chess-secret
+              key: db.pw              
         - name: DB_NAME
           valueFrom:
             configMapKeyRef:
