--- a/helm/templates/secret.yaml
+++ b/helm/templates/secret.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: chess-secret
-  namespace: chess
+  namespace: {{ .Values.backend.nameSpace }}
 type: Opaque
 data:
-  db.user: ZG9uYXQK
-  db.pw: ZG9uLWNoZXNzLTc3
+  db.user: {{ .Values.backend.env.db_user.value | b64enc}}
+  db.pw: {{ .Values.backend.env.db_password.value | b64enc}}
