--- a/helm/templates/chess_frontend_s.yaml
+++ b/helm/templates/chess_frontend_s.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend
+  name: {{ .Values.frontend.name }}
 spec:
   selector:
-    app: frontend
-    tier: frontend
+    app: {{ .Values.frontend.name }}
+    tier: {{ .Values.frontend.name }}
   ports:
   - protocol: TCP
-    port: 4200
-    targetPort: 4200
-    nodePort: 32123
+    port: {{ .Values.frontend.port }}
+    targetPort: {{ .Values.frontend.port }}
+    nodePort: {{ .Values.nodePort }}
   type: NodePort
