--- a/helm/templates/config.yaml
+++ b/helm/templates/config.yaml
@@ -2,9 +2,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: chess-config
-  namespace: chess
+  namespace: {{ .Values.backend.nameSpace }}
 data:
-  db.service: postgre
-  db.name: donat
-  db.user: donat
-  db.pw: don-chess-77
+  db.service: {{ .Values.backend.env.db_service.value}}
+  db.name: {{ .Values.backend.env.db_user.value}}
+  db.user: {{ .Values.backend.env.db_name.value}}
