--- a/helm/templates/chess_db_s.yaml
+++ b/helm/templates/chess_db_s.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.profile.value "prod" }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -10,3 +11,4 @@ spec:
   - protocol: TCP
     port: {{ .Values.db.port }}
     targetPort: {{ .Values.db.port }}
+{{- end }}
