--- a/helm/templates/secret.yaml
+++ b/helm/templates/secret.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.profile.value "prod" }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -7,3 +8,4 @@ type: Opaque
 data:
   db.user: {{ .Values.backend.env.db_user.value | b64enc}}
   db.pw: {{ .Values.backend.env.db_password.value | b64enc}}
+{{- end }}    
