--- a/helm/templates/persVolume.yaml
+++ b/helm/templates/persVolume.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.profile.value "prod" }}
 apiVersion: v1
 kind: PersistentVolume
 metadata:
@@ -12,3 +13,4 @@ spec:
     - ReadWriteOnce
   hostPath:
     path: {{ .Values.volume.path }}
+{{- end }}      
