--- a/helm/templates/persVolumeClaim.yaml
+++ b/helm/templates/persVolumeClaim.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.profile.value "prod" }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -9,3 +10,4 @@ spec:
   resources:
     requests:
       storage: 3Gi
+{{- end }}        
